--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.2",
 	"mongoose": "~4.9.1",
-	"body-parser": "~1.17.1"
+	"body-parser": "~1.17.1",
+	"express-validator": "~3.1.2"
   }
 }
